spices/ecs/tests/errors/cap-double-use.tur
;; I1 negative regression: consuming a :linear WriteCap twice must be
;; rejected by the elaborator (TUR-E0101). Requires -Xsubstructural.

(defmodule cap_double_use_test
  (export)

(import ecs/cap :refer [WriteCap make-write-cap use-cap!])

(defstruct Pos [x : int y : int])

(defn main [] : int
  (let [cap (:: (make-write-cap 0) (WriteCap Pos))]
    (use-cap! cap)
    (use-cap! cap)   ;; ERROR: linear value used twice
    0))

) ;; end defmodule cap_double_use_test
